--- a/dust_env.yml
+++ b/dust_env.yml
@@ -1,53 +1,73 @@
 name: dust
 channels:
+  - pyviz
+  - anaconda
   - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - affine=2.3.0=py_0
+  - aiohttp=3.6.2=py38h516909a_0
+  - alabaster=0.7.12=py_0
+  - async-timeout=3.0.1=py_1000
   - attrs=19.3.0=py_0
+  - babel=2.8.0=py_0
   - backcall=0.2.0=py_0
   - blas=1.0=mkl
   - bleach=3.1.5=py_0
+  - blosc=1.20.0=he1b5a44_0
   - bokeh=2.1.1=py38_0
   - boost-cpp=1.72.0=h8e57a91_0
   - branca=0.4.1=py_0
+  - brotli=1.0.7=he1b5a44_1004
   - brotlipy=0.7.0=py38h7b6447c_1000
   - bzip2=1.0.8=h7b6447c_0
   - c-ares=1.16.1=h516909a_0
-  - ca-certificates=2020.6.24=0
+  - ca-certificates=2020.6.20=hecda079_0
   - cairo=1.16.0=hcf35c78_1003
   - cartopy=0.18.0=py38h172510d_0
-  - certifi=2020.6.20=py38_0
+  - cdsapi=0.2.7=py_0
+  - certifi=2020.6.20=py38h32f6830_0
   - cffi=1.14.1=py38h5bae8af_0
   - cfitsio=3.470=hce51eda_6
   - cftime=1.2.1=py38heb32a55_0
   - chardet=3.0.4=py38_1003
+  - charls=2.1.0=he1b5a44_2
   - click=7.1.2=py_0
   - click-plugins=1.1.1=py_0
   - cligj=0.5.0=py_0
   - cloudpickle=1.5.0=py_0
+  - colorcet=2.0.2=py_0
   - cryptography=2.9.2=py38h1ba5d50_0
   - curl=7.71.1=he644dc0_4
   - cycler=0.10.0=py38_0
   - cytoolz=0.10.1=py38h7b6447c_0
   - dask=2.20.0=py_0
   - dask-core=2.20.0=py_0
+  - dask-labextension=3.0.0=py_0
+  - datashader=0.10.0=py_0
+  - datashape=0.5.4=py_1
   - dbus=1.13.16=hb2f20db_0
   - decorator=4.4.2=py_0
   - defusedxml=0.6.0=py_0
   - distributed=2.20.0=py38_0
+  - docutils=0.16=py38_1
   - entrypoints=0.3=py38_0
   - expat=2.2.9=he6710b0_2
+  - f90nml=1.1.2=py38_0
   - ffmpeg=4.3=h167e202_0
+  - fiona=1.8.13=py38h033e0f6_1
   - folium=0.11.0=py_0
   - fontconfig=2.13.1=h86ecdb6_1001
   - freetype=2.10.2=h5ab3b9f_0
   - freexl=1.0.5=h516909a_1002
   - fsspec=0.7.4=py_0
   - gdal=3.0.4=py38h172510d_10
+  - geopandas=0.8.1=py_0
   - geos=3.8.1=he1b5a44_0
   - geotiff=1.6.0=h05acad5_0
+  - geoviews=1.8.1=py_0
+  - geoviews-core=1.8.1=py_0
   - gettext=0.19.8.1=hc5be6a0_1002
   - giflib=5.2.1=h516909a_2
   - glib=2.65.0=h6f030ca_0
@@ -58,12 +78,17 @@ dependencies:
   - hdf4=4.2.13=h3ca952b_2
   - hdf5=1.10.6=nompi_h3c11f04_100
   - heapdict=1.0.1=py_0
+  - holoviews=1.13.3=py_0
   - icu=64.2=he1b5a44_1
   - idna=2.10=py_0
+  - imagecodecs=2020.5.30=py38h36e1e94_1
+  - imageio=2.9.0=py_0
+  - imagesize=1.2.0=py_0
   - importlib-metadata=1.7.0=py38_0
   - importlib_metadata=1.7.0=0
   - intel-openmp=2020.1=217
   - ipykernel=5.3.3=py38h5ca1d4c_0
+  - ipympl=0.5.8=pyh9f0ad1d_0
   - ipython=7.16.1=py38h5ca1d4c_0
   - ipython_genutils=0.2.0=py38_0
   - ipywidgets=7.5.1=py_0
@@ -71,17 +96,23 @@ dependencies:
   - jinja2=2.11.2=py_0
   - jpeg=9d=h516909a_0
   - json-c=0.13.1=hbfbb72e_1002
+  - json5=0.9.5=py_0
   - jsonschema=3.2.0=py38_0
   - jupyter=1.0.0=py38_7
+  - jupyter-server-proxy=1.5.0=py_0
   - jupyter_client=6.1.6=py_0
   - jupyter_console=6.1.0=py_0
   - jupyter_core=4.6.3=py38_0
+  - jupyterlab=2.1.5=py_0
+  - jupyterlab_server=1.2.0=py_0
+  - jxrlib=1.1=h516909a_2
   - kealib=1.4.13=h33137a7_1
   - kiwisolver=1.2.0=py38hfd86e86_0
   - krb5=1.17.1=hfafb76e_2
   - lame=3.100=h14c3975_1001
   - lcms2=2.11=h396b838_0
   - ld_impl_linux-64=2.34=hc38a660_9
+  - libaec=1.0.4=he1b5a44_1
   - libcurl=7.71.1=hcdd3856_4
   - libdap4=3.20.6=h1d1bd15_1
   - libedit=3.1.20191231=h14c3975_1
@@ -98,17 +129,21 @@ dependencies:
   - libpng=1.6.37=hbc83047_0
   - libpq=12.3=h5513abc_0
   - libsodium=1.0.18=h7b6447c_0
+  - libspatialindex=1.9.3=he1b5a44_3
   - libspatialite=4.3.0a=h2482549_1038
   - libssh2=1.9.0=h1ba5d50_1
   - libstdcxx-ng=9.1.0=hdf63c60_0
   - libtiff=4.1.0=h2733197_1
   - libuuid=2.32.1=h14c3975_1000
+  - libuv=1.39.0=h516909a_0
   - libwebp-base=1.1.0=h516909a_3
   - libxcb=1.14=h7b6447c_0
   - libxml2=2.9.10=hee79883_0
+  - libzopfli=1.0.3=he1b5a44_0
   - llvmlite=0.33.0=py38hc6ec683_1
   - locket=0.2.0=py38_1
   - lz4-c=1.9.2=he6710b0_0
+  - markdown=3.2.2=py_0
   - markupsafe=1.1.1=py38h7b6447c_0
   - matplotlib=3.3.0=1
   - matplotlib-base=3.3.0=py38h91b0d89_1
@@ -117,12 +152,18 @@ dependencies:
   - mkl-service=2.3.0=py38he904b0f_0
   - mkl_fft=1.1.0=py38h23d657b_0
   - mkl_random=1.1.1=py38h0573a6f_0
+  - more-itertools=8.4.0=py_0
   - msgpack-python=1.0.0=py38hfd86e86_1
+  - multidict=4.7.5=py38h1e0a361_1
+  - multipledispatch=0.6.0=py_0
+  - munch=2.5.0=py_0
   - nbconvert=5.6.1=py38_0
   - nbformat=5.0.7=py_0
   - ncurses=6.2=he6710b0_1
   - netcdf4=1.5.4=nompi_py38hfd55d45_100
   - nettle=3.4.1=h1bed415_1002
+  - networkx=2.4=py_1
+  - nodejs=12.18.3=h67efad7_0
   - notebook=6.0.3=py38_0
   - numba=0.50.1=py38h0573a6f_1
   - numpy=1.18.5=py38ha1c710e_0
@@ -130,12 +171,14 @@ dependencies:
   - olefile=0.46=py_0
   - openh264=2.1.1=h8b12597_0
   - openjpeg=2.3.1=h981e76c_3
-  - openssl=1.1.1g=h7b6447c_0
+  - openssl=1.1.1g=h516909a_1
   - owslib=0.20.0=py_0
   - packaging=20.4=py_0
   - pandas=1.0.5=py38h0573a6f_0
   - pandoc=2.10=0
   - pandocfilters=1.4.2=py38_1
+  - panel=0.9.7=py_0
+  - param=1.9.3=py_0
   - parso=0.7.0=py_0
   - partd=1.1.0=py_0
   - pcre=8.44=he6710b0_0
@@ -145,6 +188,7 @@ dependencies:
   - pip=20.1.1=py38_1
   - pixman=0.38.0=h516909a_1003
   - plotly=4.8.2=py_0
+  - pluggy=0.13.1=py38_0
   - poppler=0.87.0=h4190859_1
   - poppler-data=0.4.9=1
   - postgresql=12.3=h8573dbc_0
@@ -154,7 +198,10 @@ dependencies:
   - prompt_toolkit=3.0.5=0
   - psutil=5.7.0=py38h7b6447c_0
   - ptyprocess=0.6.0=py38_0
+  - py=1.9.0=py_0
   - pycparser=2.20=py_2
+  - pyct=0.4.6=py_0
+  - pyct-core=0.4.6=py_0
   - pyepsg=0.4.0=py_0
   - pygments=2.6.1=py_0
   - pykdtree=1.3.1=py38hdd07704_1002
@@ -165,10 +212,13 @@ dependencies:
   - pyrsistent=0.16.0=py38h7b6447c_0
   - pyshp=2.1.0=py_0
   - pysocks=1.7.1=py38_0
+  - pytest=5.4.3=py38_0
   - python=3.8.5=h4d41432_2_cpython
   - python-dateutil=2.8.1=py_0
   - python_abi=3.8=1_cp38
   - pytz=2020.1=py_0
+  - pyviz_comms=0.7.6=py_0
+  - pywavelets=1.1.1=py38h8790de6_1
   - pyyaml=5.3.1=py38h7b6447c_1
   - pyzmq=19.0.1=py38he6710b0_1
   - qt=5.9.7=h0c104cb_3
@@ -179,23 +229,38 @@ dependencies:
   - requests=2.24.0=py_0
   - retrying=1.3.3=py_2
   - rioxarray=0.0.31=py_0
+  - rtree=0.9.4=py38h08f867b_1
+  - scikit-image=0.17.2=py38hcb8c335_1
   - scipy=1.5.0=py38h0b6359f_0
   - send2trash=1.5.0=py38_0
   - setuptools=49.2.0=py38_0
   - shapely=1.7.0=py38hd168ffb_3
+  - simpervisor=0.3=py_1
   - sip=4.19.13=py38he6710b0_0
   - six=1.15.0=py_0
+  - snappy=1.1.8=he1b5a44_3
+  - snowballstemmer=2.0.0=py_0
   - snuggs=1.4.7=py_0
   - sortedcontainers=2.2.2=py_0
+  - sphinx=3.1.2=py_0
+  - sphinx_rtd_theme=0.4.3=py_0
+  - sphinxcontrib-applehelp=1.0.2=py_0
+  - sphinxcontrib-devhelp=1.0.2=py_0
+  - sphinxcontrib-htmlhelp=1.0.3=py_0
+  - sphinxcontrib-jsmath=1.0.1=py_0
+  - sphinxcontrib-qthelp=1.0.3=py_0
+  - sphinxcontrib-serializinghtml=1.1.4=py_0
   - sqlite=3.32.3=h62c20be_0
   - tbb=2020.0=hfd86e86_0
   - tblib=1.6.0=py_0
   - terminado=0.8.3=py38_0
   - testpath=0.4.4=py_0
+  - tifffile=2020.7.24=py_0
   - tiledb=1.7.7=h8efa9f0_3
   - tk=8.6.10=hbc83047_0
   - toolz=0.10.0=py_0
   - tornado=6.0.4=py38h7b6447c_1
+  - tqdm=4.48.1=pyh9f0ad1d_0
   - traitlets=4.3.3=py38_0
   - typing_extensions=3.7.4.2=py_0
   - tzcode=2020a=h516909a_0
@@ -218,9 +283,12 @@ dependencies:
   - xorg-xproto=7.0.31=h14c3975_1007
   - xz=5.2.5=h7b6447c_0
   - yaml=0.2.5=h7b6447c_0
+  - yarl=1.4.2=py38h516909a_0
   - zeromq=4.3.2=he6710b0_2
   - zict=2.0.0=py_0
   - zipp=3.1.0=py_0
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.4.5=h0b5b093_0
+  - pip:
+    - python-graphviz==0.14.1
 prefix: /home/ovewh/miniconda3/envs/dust
