--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,14 @@ numpy = "^1.22.3"
 Cartopy = "^0.20.2"
 pandas = "^1.4.1"
 matplotlib = "^3.5.1"
+dask = "^2022.2.1"
 
 [tool.poetry.dev-dependencies]
 ipython = "^8.1.1"
 conda-lock = "^1.0.2"
+
+[tool.poetry.scripts]
+process_flexpart="dust.scripts.process_flexpart:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
